<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signout_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_dialog_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintLeft_toLeftOf="@id/sys_test_dialog_guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@id/sys_test_dialog_guideline_horizontal_Top"
        />

    <TextView
        android:id="@+id/signout_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_dialog_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintLeft_toLeftOf="@id/sys_test_dialog_guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@id/signout_dialog_title"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/signout_dialog_button_signout"
        style="@style/Widget.Custom.ActionButton1"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/signout_dialog_action_signout"
        app:layout_constraintRight_toLeftOf="@id/signout_dialog_button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/signout_dialog_message"
        android:paddingBottom="16dp"
        />

    <Button
        android:id="@+id/signout_dialog_button_cancel"
        style="@style/Widget.Custom.ActionButton1"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/signout_dialog_action_cancel"
        app:layout_constraintRight_toLeftOf="@id/sys_test_dialog_guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/signout_dialog_message"
        android:paddingBottom="16dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sys_test_dialog_guideline_horizontal_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sys_test_dialog_guideline_horizontal_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sys_test_dialog_guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sys_test_dialog_guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>