<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/master_accounts_appbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlayMaterial"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/master_accounts_toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:theme="@style/ToolBarOverlayMaterial"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/master_account_toolbar_title">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/title_master_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/master_accounts_appbar"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:text="My Master Accounts"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        />

    <!--<TextView
        android:id="@+id/tv_account_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/master_accounts_appbar"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:text="Add a master account"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        />-->


    <ImageView
        android:id="@+id/iv_info_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/ic_baseline_error_outline_24"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_info_no_account_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_info_no_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/info_no_master_account_available"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:visibility="gone"
        />

    <include
        android:id="@+id/account_list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_master_account"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        layout="@layout/account_list_item">
    </include>

    <include
        android:id="@+id/account_list2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_list1"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        layout="@layout/account_list_item">
    </include>

    <Button
        android:id="@+id/add_account_btn"
        style="@style/Widget.Custom.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_a_master_account"
        app:layout_constraintTop_toBottomOf="@+id/account_list1"
        android:layout_marginTop = "16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:drawableLeft="@drawable/ic_baseline_person_add_24"
        android:drawablePadding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>